Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4739

Code inconsistencies when referring to config_llog_instance

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • 3
    • 13021

      While trying to search for other similar occurrences of an issue I was working to keep consistent with current coding conventions I found that there are two instances where the local variable pointer name of the config_llog_instance was inconsistent with the way it is done in other areas of the code.

      Most of the files do the following:
      struct config_llog_instance *cfg
      or
      struct config_llog_instance lcfg

      However,

      obd_config.c and obd_mount_server.c both have functions that use the following method:
      struct config_llog_instance *clli

            utopiabound Nathaniel Clark
            bobbielind Bobbie Lind (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: