LU-4739 obd: Fixing code inconsistencies and coding style

config_llog_instance is referenced differently in these functions
than anywhere else in the code.  This patch corrects that as well
as fixing some coding style errors.

Signed-off-by: Bobbie Lind <bobbie.j.lind@intel.com>
Change-Id: I9de1a37e397ffcf660422d3adfeb2f59881ea210
Reviewed-on: http://review.whamcloud.com/10420
Tested-by: Jenkins
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>